# backend/public/swagger/swagger.json
@@ -5,7 +5,7 @@
     "version": "0.0.1",
     "title": "VideoShare WebService"
   },
-  "host": "videosharelocation.dev/backend/public/",
+  "host": "videoshare.devworms.com",
   "basePath": "/api",
   "schemes": [
     "http"
@@ -33,6 +33,13 @@
             "name": "name",
             "in": "formData",
             "description": "nombre del usuario",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "url_img",
+            "in": "formData",
+            "description": "imagen del usuario",
             "required": false,
             "type": "string"
           }
